1. 修正部分问题

--- a/.gitignore
+++ b/.gitignore
@@ -62,7 +62,6 @@ CMakeCache.txt
 CMakeFiles
 CMakeScripts
 Testing
-Makefile
 cmake_install.cmake
 install_manifest.txt
 compile_commands.json
@@ -111,3 +110,4 @@ tmp/
 
 
 # End of https://www.toptal.com/developers/gitignore/api/c,visualstudiocode,cmake
+.vscode/*
